# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.703 2010/04/30 14:40:00 ranger Exp $

  30 Apr 2010; Brent Baude <ranger@gentoo.org> portage-2.1.8.3.ebuild:
  Marking portage-2.1.8.3 ppc64 for bug 314247

  28 Apr 2010; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Fix whitespace handling when installing bin and pym directores.

  14 Apr 2010; Jeroen Roovers <jer@gentoo.org> portage-2.1.8.3.ebuild:
  Stable for HPPA (bug #314247).

  14 Apr 2010; Markos Chandras <hwoarang@gentoo.org> portage-2.1.8.3.ebuild:
  Stable on amd64 wrt bug #314247

  13 Apr 2010; Raúl Porcel <armin76@gentoo.org> portage-2.1.8.3.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #314247

  12 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  portage-2.1.8.3.ebuild:
  stable x86, bug 314247

  11 Apr 2010; <nixnut@gentoo.org> portage-2.1.8.3.ebuild:
  ppc stable #314247

  28 Mar 2010; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  In src_test, remove *.pyc from bin directory so they won't be installed.

  25 Mar 2010; Sebastian Pipping <sping@gentoo.org> portage-9999.ebuild:
  Fix live ebuild versioning:
  - OLD: 2.2_rc67-26-g1f09ba1
  - NEW: 2.2_rc67_p26

*portage-9999 (25 Mar 2010)

  25 Mar 2010; Sebastian Pipping <sping@gentoo.org> +portage-9999.ebuild:
  Add live ebuild (permission by zmedico)

  20 Mar 2010; Zac Medico <zmedico@gentoo.org> -portage-2.1.8.1.ebuild,
  -portage-2.2_rc65.ebuild:
  Remove old versions.

  12 Mar 2010; Zac Medico <zmedico@gentoo.org> metadata.xml:
  Add bugs-to and changelog elements.

  11 Mar 2010; Zac Medico <zmedico@gentoo.org> portage-2.1.6.13.ebuild:
  Make portage-2.1.6.13 EAPI 1 since python-2.5 is also EAPI 1.

  10 Mar 2010; Zac Medico <zmedico@gentoo.org> -portage-2.1.7.16.ebuild,
  -portage-2.1.8.2.ebuild, -portage-2.2_rc66.ebuild:
  Remove old ebuilds.
