@@ -12,8 +12,9 @@ DIST portage-2.2_rc64.tar.bz2 544483 RMD160 63ca64a564b3075542cd64410f2b2227de82
 DIST portage-2.2_rc67-r1.tar.bz2 557726 RMD160 b89be005ea283e12eb33eb9f659a613cf35ab5cd SHA1 af3bccb7a119141068d2fcdd514ae8aeb9a26260 SHA256 0bf1e2692b65764f009aedd6cd7255b59e51a7c0072a4ff3edee0ec7698919e9
 DIST portage-2.2_rc67-r2.tar.bz2 557503 RMD160 2774d574dbe5585646085f4a79e17f824582f88e SHA1 8aa2c965fbdc4c91a3bc1189c15fa5877c33ad85 SHA256 0fe97bfb97a1ddc083a43d28ba6744acbc623247852af85214476201f0aa41a9
 DIST portage-2.2_rc67.patch.bz2 11199 RMD160 aacf56c1b54e0debe7cbf10b7a05fef073ac7eec SHA1 da2068ac61ba7c3ae5b1ecef298775a7a30841e0 SHA256 64dad166d418a313e4d001c1c9242c40b4e969c654df86c15d5d3ddcc166b899
-DIST portage-2.2_rc78-r1.tar.bz2 620363 RMD160 fbdcd24c25ebad77abefcedac57f5a3a606cca5c SHA1 928bccfc109cb67264c0fd58697af6c5a55841ab SHA256 a9dc545658ec3cd80eea948a4595642131a3ecb6f94db8e48b7448ec1fe4eb6f
+DIST portage-2.2_rc93.tar.bz2 640858 RMD160 ab13c64f4946bfc79fde9756de4711d42ed42d1e SHA1 5f96b3846a9abebbedbf73ba5bb0abd708541af6 SHA256 bc75c832a9e30500fe5fa30794aaf1b61c3b8c3c8ce98a499cbfbe1bc82839e3
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
+DIST portage-man-pl-2.1.2.tar.bz2i 10348 RMD160 69e2204708796fc8b4354270840d2351b506a7f9 SHA1 b74344e5018ec38c6a8a8a2e554845270006ed62 SHA256 72180e468b32f93b6f2e0e0bf9fa5b1e385da0de33190c2b83c0f5581a921b5c
 EBUILD portage-2.1.6.13.ebuild 9824 RMD160 7105984fb918db107f8f5e5ecaa8cd6910ff560c SHA1 6d65368bd4505c5a2bdeda18472a75bc87fb401b SHA256 76f3ddc4e38208663ae5ba419ccaa11b6707307ef35c2db164779799f46b196e
 EBUILD portage-2.1.6.7.ebuild 8510 RMD160 d8f9213fda0f2c17ba6bb1c1c5a6ed67c37d5cd1 SHA1 4f9a08a66c46d06be85b1d0c17093e3ff9995978 SHA256 4f88b84d0c815802a1d9e8f0e7350f8bf100150b478508869dcd20475ec765dc
 EBUILD portage-2.1.7.17.ebuild 10121 RMD160 450a29c406bd178de4396835f0582e0431140709 SHA1 4ddae3a930bd67e975f2c410ebb96b1f44fbfca1 SHA256 ae8618a5b7309cf81977a076e16f79d55ed8b4bd6017fe23289e774fbca4c287
@@ -22,7 +23,7 @@ EBUILD portage-2.2_rc62.ebuild 11046 RMD160 9f093b14959b0c8f45ba8f0e0478d296a7ff
 EBUILD portage-2.2_rc67-r1.ebuild 9311 RMD160 a1e764f88f5c65e235ad85902774626732550ce3 SHA1 baf6ca0aff7da72d3609e4a81b93cdca5627862c SHA256 609313b167053a0d4fea451539aeac0067ca0370e5547c0691892a79d051a60f
 EBUILD portage-2.2_rc67-r2.ebuild 9297 RMD160 70ceb7e2a94095aa6679a42fc935abbc4f53216b SHA1 c8630e32df70fc8f2f56b2fa2036fd12f06b2c25 SHA256 7c77c327d7592bc02ce5b8721e064372e705ceda55aba847f4bad0061d62cc75
 EBUILD portage-2.2_rc67.ebuild 10585 RMD160 5b048e89f617091897af67f01376063b3370184b SHA1 e007b51065300dcad3cd389114899ae422a0c01e SHA256 c089377b80103250aeeff43310b264a0310198de79b3fd032f57cbc535332bc2
-EBUILD portage-2.2_rc78-r1.ebuild 11216 RMD160 bcf58dfd9443d6a2a426415d51d3645825043a23 SHA1 5e048520737f512d638a474691fa2bd706bd4b2d SHA256 752b2365d016d300ccd6e8e548920ebceab609a27e4edec888a6b3c1e5f1f7d9
+EBUILD portage-2.2_rc93.ebuild 11208 RMD160 3612db6f58ba00a974be30fe79efda9d278ed4c2 SHA1 9751380646a383217eee88e38bc7d3bec07b39a7 SHA256 f2673c54eee3cfd553880ab0ee54b57aeea10a3f8b884c1655dd044bed16854f
 EBUILD portage-9999.ebuild 10052 RMD160 33d3629dd83a62782f2b9888180719f955692e2b SHA1 5afd21f449ddacf20a24eca942e422305d85647c SHA256 a0de1d7dd2a1502400a7f83d0774a47debc2e6c54522b21bbaf21d8f6a56e7e1
-MISC ChangeLog 12031 RMD160 0bb17d8393c8c9a9a721f27ccf2159ee8401dfd3 SHA1 05017a6b70367f4c541339eb85b452a587eb10b6 SHA256 1c28aa44108112bbc9d041f0f2a7754697a7059d860b69717d93e8fb0e362108
+MISC ChangeLog 12232 RMD160 58a33d6ff83730f451d092e8765ed64694ffcbf3 SHA1 1dc8726761e71a4b4dd4aadf5890dc4d98777009 SHA256 d69a2b946ea5f3c615cc6954291eafe28ffd32baebf55a58a57ca965b09c833f
 MISC metadata.xml 618 RMD160 9510c974d4aa9a1383674d331a973140beb44e48 SHA1 0822478deaeb3b22358fff5c695111bfdf3ff2f6 SHA256 00ca0aa3a29ec8f82ddaf2e0f89e0b2e959131a6350f64b3c49b1125cbb32a13
