@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2_rc78.ebuild,v 1.1 2010/09/08 22:20:32 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-2.2_rc98.ebuild,v 1.1 2010/10/18 11:54:33 zmedico Exp $
 
 # Require EAPI 2 since we now require at least python-2.6 (for python 3
 # syntax support) which also requires EAPI 2.
@@ -10,10 +10,10 @@ inherit eutils multilib python
 DESCRIPTION="Portage is the package management and distribution system for Gentoo"
 HOMEPAGE="http://www.gentoo.org/proj/en/portage/index.xml"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~amd64"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
 PROVIDE="virtual/portage"
 SLOT="0"
-IUSE="build doc epydoc linguas_pl python3 selinux"
+IUSE="build doc epydoc +ipc linguas_pl python3 selinux"
 
 python_dep="python3? ( =dev-lang/python-3* )
 	!python3? (
@@ -35,7 +35,8 @@ RDEPEND="${python_dep}
 	elibc_glibc? ( >=sys-apps/sandbox-2.2 )
 	elibc_uclibc? ( >=sys-apps/sandbox-2.2 )
 	>=app-misc/pax-utils-0.1.17
-	selinux? ( sys-libs/libselinux )"
+	selinux? ( sys-libs/libselinux )
+	!<app-shells/bash-3.2_p17"
 PDEPEND="
 	!build? (
 		>=net-misc/rsync-2.6.4
@@ -57,14 +58,8 @@ prefix_src_archives() {
 
 PV_PL="2.1.2"
 PATCHVER_PL=""
-TARBALL_PV="${PV}"
-SRC_URI="http://www.funtoo.org/archive/${PF}.tar.bz2"
-
-PATCHVER=""
-if [ -n "${PATCHVER}" ]; then
-	SRC_URI="${SRC_URI} mirror://gentoo/${PN}-${PATCHVER}.patch.bz2
-	$(prefix_src_archives ${PN}-${PATCHVER}.patch.bz2)"
-fi
+TARBALL_PV=2.2_rc93
+SRC_URI="http://www.funtoo.org/archive/${PF}.tar.bz2 linguas_pl? ( mirror://gentoo/${PN}-man-pl-${PV_PL}.tar.bz2i )"
 
 S="${WORKDIR}"/${PN}-${TARBALL_PV}
 S_PL="${WORKDIR}"/${PN}-${PV_PL}
@@ -115,7 +110,15 @@ src_prepare() {
 	sed -e "1s/VERSION/${PVR}/" -i man/* || \
 		die "Failed to patch VERSION in man page headers"
 
+	if ! use ipc ; then
+		einfo "Disabling ipc..."
+		sed -e "s:_enable_ipc_daemon = True:_enable_ipc_daemon = False:" \
+			-i pym/_emerge/AbstractEbuildProcess.py || \
+			die "failed to patch AbstractEbuildProcess.py"
+	fi
+
 	if use python3; then
+		einfo "Converting shebangs for python3..."
 		python_convert_shebangs -r 3 .
 	fi
 }
@@ -161,13 +164,6 @@ src_install() {
 	insinto /etc
 	doins etc-update.conf dispatch-conf.conf || die
 
-	# This allows config file updates that are applied for package
-	# moves to take effect immediately.
-	echo 'CONFIG_PROTECT_MASK="/etc/portage"' > "$T"/50portage \
-		|| die "failed to create 50portage"
-	doenvd "$T"/50portage || die "doenvd 50portage failed"
-	rm "$T"/50portage
-
 	insinto "$portage_share_config/sets"
 	doins "$S"/cnf/sets/*.conf || die
 	insinto "$portage_share_config"
@@ -189,10 +185,7 @@ src_install() {
 	insinto /etc/logrotate.d
 	doins "${S}"/cnf/logrotate.d/elog-save-summary || die
 
-	# BSD and OSX need a sed wrapper so that find/xargs work properly
-	if use userland_GNU; then
-		rm "${S}"/bin/ebuild-helpers/sed || die "Failed to remove sed wrapper"
-	fi
+	# Funtoo has removed the sed wrapper from the upstream sources...
 
 	local x symlinks
 
@@ -215,6 +208,8 @@ src_install() {
 	for x in $(find pym/* -type d) ; do
 		insinto $portage_base/$x || die "insinto failed"
 		cd "$S"/$x || die "cd failed"
+		# __pycache__ directories contain no py files
+		[[ "*.py" != $(echo *.py) ]] || continue
 		doins *.py || die "doins failed"
 		symlinks=$(find . -mindepth 1 -maxdepth 1 -type l)
 		if [ -n "$symlinks" ] ; then
@@ -243,7 +238,7 @@ src_install() {
 	use epydoc && dohtml -r "${WORKDIR}"/api
 
 	dodir /usr/bin
-	for x in ebuild egencache emerge portageq repoman ; do
+	for x in ebuild egencache emerge portageq quickpkg repoman ; do
 		dosym ../${libdir}/portage/bin/${x} /usr/bin/${x}
 	done
 
@@ -255,7 +250,6 @@ src_install() {
 		env-update
 		etc-update
 		fixpackages
-		quickpkg
 		regenworld"
 	local x
 	for x in ${my_syms}; do
