@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.703 2010/04/30 14:40:00 ranger Exp $
 
+*portage-2.2_rc93
+
+  20 Oct 2010; Daniel Robbins <drobbins@funtoo.org> portage-2.2_rc93.ebuild:
+  New upstream version with a Funtoo sed wrapper fix to resolve a Funtoo-
+  specific sed wrapper issue.
+
   30 Apr 2010; Brent Baude <ranger@gentoo.org> portage-2.1.8.3.ebuild:
   Marking portage-2.1.8.3 ppc64 for bug 314247
 
